# kio-rsync

./: CMakeLists.txt  kio_rsync.cpp  kio_rsync.h  rsync.json  rsync_protocol.cpp  rsync_protocol.h
.github/workflows/: release-deb.yml
